# rust-template

./: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  rust-toolchain.toml
.github/workflow/: ci.yml
crates/example/: Cargo.toml
