[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonedaddy/rust-template"
rust-version = "1.86"

[workspace.dependencies]
tokio = {version = "1.44.2", features = ["full", "parking_lot"]}
anyhow = {version  = "1"}
serde = {version = "1", features = ["derive"]}